# solid-principles-py

./: pyproject.toml
src/solid_principles_py/: __init__.py  dip.py  isp.py  lsp.py  ocp.py  srp.py
src/solid_principles_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
